# WatchNext

./: .gitignore  README.md  implementation_plan.md  main.py  pyproject.toml  requirements.txt
api/: main.py
frontend/: README.md  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/core/constants/: app_constants.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/features/home/presentation/screens/: home_screen.dart
frontend/lib/features/home/presentation/widgets/: hero_banner.dart  movie_card.dart  movie_row.dart  rating_setup_dialog.dart
frontend/lib/features/movies/providers/: movie_providers.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
models/: movies.pkl  ratings.pkl  training.py
notebooks/: EDA..ipynb  exploratory_data_analysis.ipynb  feature_engineering.ipynb  model_evaluation_and_exploration.ipynb  models_package_workflow.ipynb  svd_model.ipynb
reports/: evaluation_summary.json
src/: __init__.py  common.py  data_loader.py  eda.py  popularity_model.py
src/evaluation/: __init__.py  evaluate_models.py
src/features/: __init__.py  build_features.py
src/models/: collaborative_filtering.py  content_based.py  hybrid_recommender.py  neural_cf.py  popularity_model.py
watchnext/: __init__.py  data_loader.py  eda.py  popularity_model.py
watchnext/evaluation/: metrics.py
watchnext/features/: build_features.py
watchnext/models/: __init__.py  collaborative_filtering.py  content_based.py  hybrid_recommender.py  neural_cf.py  popularity_model.py
(+2 files in other folders)
