[project]
name = "watchnext"
version = "0.1.0"
description = "WatchNext is an end-to-end movie recommendation platform that helps users discover movies tailored to their interests and preferences."
readme = "README.md"
authors = [
    { name = "dev.ahmed.mostafa" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "path>=17.1.1",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.4",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
include = ["src", "main.py", "api"]
executionEnvironments = [
  { root = "." }
]


